--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mailToZwingerweg</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Zwingerweg Toilette</title>
+
+  <link rel="icon" href="favicon.png">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    </html><h1><a href="mailto:zwingerweg.toilette@gmail.com">Send a Mail</a></h1>
+  <div class="overlay"></div>
+
+  <div class="content">
+    <div class="page__content">
+      <h1>Under Maintenance</h1>
+      <p>
+        Diese Website besitzt noch keinen Inhalt.
+      </p>
+    </div>
+  </div>
 </body>
+
+</html>
