--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="page__content">
       <h1>Under Maintenance</h1>
       <p>
-        Diese Website besitzt noch keinen Inhalt.
+        <a href="mailto:zwingerweg.toilette@gmail.com" id="mailto">contact</a>
       </p>
     </div>
   </div>
