--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   <div class="content">
     <div class="page__content">
       <h1>Under Maintenance</h1>
-      <p>
-        <a href="mailto:zwingerweg.toilette@gmail.com" id="mailto">contact</a>
+      <p id="subtitle">
+        <a href="mailto:zwingerweg.toilette@gmail.com" class="subtitle">Contact</a> 
+        <a href="https://search.google.com/local/writereview?placeid=ChIJTS8AI-_1l0cRZDtP9X80rJw" class="subtitle">Leave a review</a>
       </p>
     </div>
   </div>
